ResourceFile:Adding Tags

--- a/instat/My Project/Resources.resx
+++ b/instat/My Project/Resources.resx
@@ -1309,4 +1309,31 @@
   <data name="Rate" xml:space="preserve">
     <value>rate</value>
   </data>
+  <data name="Canonical_Correlations" xml:space="preserve">
+    <value>Canonical Correlations</value>
+  </data>
+  <data name="Copy_Sheet" xml:space="preserve">
+    <value>Copy Sheet</value>
+  </data>
+  <data name="Factor_unused_levels" xml:space="preserve">
+    <value>Factor unused levels</value>
+  </data>
+  <data name="Log_Linear" xml:space="preserve">
+    <value>Log-Linear</value>
+  </data>
+  <data name="Missing" xml:space="preserve">
+    <value>Missing</value>
+  </data>
+  <data name="Multinomial" xml:space="preserve">
+    <value>Multinomial</value>
+  </data>
+  <data name="One_Sample_Summary_Data" xml:space="preserve">
+    <value>One Sample Summary Data</value>
+  </data>
+  <data name="Principal_Components" xml:space="preserve">
+    <value>Principal Components</value>
+  </data>
+  <data name="Two_Samles_Summary_Data" xml:space="preserve">
+    <value>Two Samples Summary Data</value>
+  </data>
 </root>
