--- a/instat/dlgRegressionSimple.resx
+++ b/instat/dlgRegressionSimple.resx
@@ -192,171 +192,6 @@
   <data name="&gt;&gt;txtdf.Type" xml:space="preserve">
     <value>System.Windows.Forms.TextBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="lblConfidence.AutoSize" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="lblConfidence.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
-  </data>
-  <data name="lblConfidence.Location" type="System.Drawing.Point, System.Drawing">
-    <value>240, 199</value>
-  </data>
-  <data name="lblConfidence.Size" type="System.Drawing.Size, System.Drawing">
-    <value>0, 13</value>
-  </data>
-  <data name="lblConfidence.TabIndex" type="System.Int32, mscorlib">
-    <value>18</value>
-  </data>
-  <data name="&gt;&gt;lblConfidence.Name" xml:space="preserve">
-    <value>lblConfidence</value>
-  </data>
-  <data name="&gt;&gt;lblConfidence.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;lblConfidence.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;lblConfidence.ZOrder" xml:space="preserve">
-    <value>8</value>
-  </data>
-  <data name="lblExplanatoryVariable.AutoSize" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="lblExplanatoryVariable.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
-  </data>
-  <data name="lblExplanatoryVariable.Location" type="System.Drawing.Point, System.Drawing">
-    <value>237, 89</value>
-  </data>
-  <data name="lblExplanatoryVariable.Size" type="System.Drawing.Size, System.Drawing">
-    <value>0, 13</value>
-  </data>
-  <data name="lblExplanatoryVariable.TabIndex" type="System.Int32, mscorlib">
-    <value>17</value>
-  </data>
-  <data name="&gt;&gt;lblExplanatoryVariable.Name" xml:space="preserve">
-    <value>lblExplanatoryVariable</value>
-  </data>
-  <data name="&gt;&gt;lblExplanatoryVariable.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;lblExplanatoryVariable.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;lblExplanatoryVariable.ZOrder" xml:space="preserve">
-    <value>9</value>
-  </data>
-  <data name="lblResponseVariable.AutoSize" type="System.Boolean, mscorlib">
-    <value>True</value>
-  </data>
-  <data name="lblResponseVariable.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
-  </data>
-  <data name="lblResponseVariable.Location" type="System.Drawing.Point, System.Drawing">
-    <value>237, 57</value>
-  </data>
-  <data name="lblResponseVariable.Size" type="System.Drawing.Size, System.Drawing">
-    <value>0, 13</value>
-  </data>
-  <data name="lblResponseVariable.TabIndex" type="System.Int32, mscorlib">
-    <value>16</value>
-  </data>
-  <data name="&gt;&gt;lblResponseVariable.Name" xml:space="preserve">
-    <value>lblResponseVariable</value>
-  </data>
-  <data name="&gt;&gt;lblResponseVariable.Type" xml:space="preserve">
-    <value>System.Windows.Forms.Label, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
-  </data>
-  <data name="&gt;&gt;lblResponseVariable.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;lblResponseVariable.ZOrder" xml:space="preserve">
-    <value>10</value>
-  </data>
-  <data name="ucrExplanatory.Location" type="System.Drawing.Point, System.Drawing">
-    <value>296, 105</value>
-  </data>
-  <data name="ucrExplanatory.Size" type="System.Drawing.Size, System.Drawing">
-    <value>106, 26</value>
-  </data>
-  <data name="ucrExplanatory.TabIndex" type="System.Int32, mscorlib">
-    <value>26</value>
-  </data>
-  <data name="&gt;&gt;ucrExplanatory.Name" xml:space="preserve">
-    <value>ucrExplanatory</value>
-  </data>
-  <data name="&gt;&gt;ucrExplanatory.Type" xml:space="preserve">
-    <value>instat.ucrReceiverSingle, instat, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</value>
-  </data>
-  <data name="&gt;&gt;ucrExplanatory.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;ucrExplanatory.ZOrder" xml:space="preserve">
-    <value>5</value>
-  </data>
-  <data name="ucrResponse.Location" type="System.Drawing.Point, System.Drawing">
-    <value>296, 53</value>
-  </data>
-  <data name="ucrResponse.Size" type="System.Drawing.Size, System.Drawing">
-    <value>106, 26</value>
-  </data>
-  <data name="ucrResponse.TabIndex" type="System.Int32, mscorlib">
-    <value>25</value>
-  </data>
-  <data name="&gt;&gt;ucrResponse.Name" xml:space="preserve">
-    <value>ucrResponse</value>
-  </data>
-  <data name="&gt;&gt;ucrResponse.Type" xml:space="preserve">
-    <value>instat.ucrReceiverSingle, instat, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</value>
-  </data>
-  <data name="&gt;&gt;ucrResponse.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;ucrResponse.ZOrder" xml:space="preserve">
-    <value>6</value>
-  </data>
-  <data name="UcrSelectorByDataFrameAddRemoveSimpleReg.Location" type="System.Drawing.Point, System.Drawing">
-    <value>12, 3</value>
-  </data>
-  <data name="UcrSelectorByDataFrameAddRemoveSimpleReg.Size" type="System.Drawing.Size, System.Drawing">
-    <value>242, 179</value>
-  </data>
-  <data name="UcrSelectorByDataFrameAddRemoveSimpleReg.TabIndex" type="System.Int32, mscorlib">
-    <value>24</value>
-  </data>
-  <data name="&gt;&gt;UcrSelectorByDataFrameAddRemoveSimpleReg.Name" xml:space="preserve">
-    <value>UcrSelectorByDataFrameAddRemoveSimpleReg</value>
-  </data>
-  <data name="&gt;&gt;UcrSelectorByDataFrameAddRemoveSimpleReg.Type" xml:space="preserve">
-    <value>instat.ucrSelectorByDataFrameAddRemove, instat, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</value>
-  </data>
-  <data name="&gt;&gt;UcrSelectorByDataFrameAddRemoveSimpleReg.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;UcrSelectorByDataFrameAddRemoveSimpleReg.ZOrder" xml:space="preserve">
-    <value>7</value>
-  </data>
-  <data name="ucrBase.Location" type="System.Drawing.Point, System.Drawing">
-    <value>12, 215</value>
-  </data>
-  <data name="ucrBase.Size" type="System.Drawing.Size, System.Drawing">
-    <value>410, 54</value>
-  </data>
-  <data name="ucrBase.TabIndex" type="System.Int32, mscorlib">
-    <value>1</value>
-  </data>
-  <data name="&gt;&gt;ucrBase.Name" xml:space="preserve">
-    <value>ucrBase</value>
-  </data>
-  <data name="&gt;&gt;ucrBase.Type" xml:space="preserve">
-    <value>instat.ucrButtons, instat, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</value>
-  </data>
-  <data name="&gt;&gt;ucrBase.Parent" xml:space="preserve">
-    <value>$this</value>
-  </data>
-  <data name="&gt;&gt;ucrBase.ZOrder" xml:space="preserve">
-    <value>11</value>
-  </data>
   <data name="lblResponse.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
@@ -370,7 +205,7 @@
     <value>96, 13</value>
   </data>
   <data name="lblResponse.TabIndex" type="System.Int32, mscorlib">
-    <value>27</value>
+    <value>1</value>
   </data>
   <data name="lblResponse.Text" xml:space="preserve">
     <value>Response Variable</value>
@@ -390,6 +225,9 @@
   <data name="lblExplanatory.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
+  <data name="lblExplanatory.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
   <data name="lblExplanatory.Location" type="System.Drawing.Point, System.Drawing">
     <value>298, 89</value>
   </data>
@@ -397,7 +235,7 @@
     <value>103, 13</value>
   </data>
   <data name="lblExplanatory.TabIndex" type="System.Int32, mscorlib">
-    <value>28</value>
+    <value>3</value>
   </data>
   <data name="lblExplanatory.Text" xml:space="preserve">
     <value>Explanatory Variable</value>
@@ -417,6 +255,9 @@
   <data name="lblFittedModel.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
   </data>
+  <data name="lblFittedModel.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
   <data name="lblFittedModel.Location" type="System.Drawing.Point, System.Drawing">
     <value>15, 192</value>
   </data>
@@ -424,7 +265,7 @@
     <value>65, 13</value>
   </data>
   <data name="lblFittedModel.TabIndex" type="System.Int32, mscorlib">
-    <value>29</value>
+    <value>5</value>
   </data>
   <data name="lblFittedModel.Text" xml:space="preserve">
     <value>Fitted Model</value>
@@ -448,7 +289,7 @@
     <value>100, 20</value>
   </data>
   <data name="txtLastLM.TabIndex" type="System.Int32, mscorlib">
-    <value>30</value>
+    <value>6</value>
   </data>
   <data name="&gt;&gt;txtLastLM.Name" xml:space="preserve">
     <value>txtLastLM</value>
@@ -462,6 +303,9 @@
   <data name="&gt;&gt;txtLastLM.ZOrder" xml:space="preserve">
     <value>1</value>
   </data>
+  <data name="cmdRegressionOptions.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
   <data name="cmdRegressionOptions.Location" type="System.Drawing.Point, System.Drawing">
     <value>322, 182</value>
   </data>
@@ -469,7 +313,7 @@
     <value>75, 23</value>
   </data>
   <data name="cmdRegressionOptions.TabIndex" type="System.Int32, mscorlib">
-    <value>31</value>
+    <value>7</value>
   </data>
   <data name="cmdRegressionOptions.Text" xml:space="preserve">
     <value>Options...</value>
@@ -486,6 +330,90 @@
   <data name="&gt;&gt;cmdRegressionOptions.ZOrder" xml:space="preserve">
     <value>0</value>
   </data>
+  <data name="ucrExplanatory.Location" type="System.Drawing.Point, System.Drawing">
+    <value>296, 105</value>
+  </data>
+  <data name="ucrExplanatory.Size" type="System.Drawing.Size, System.Drawing">
+    <value>106, 26</value>
+  </data>
+  <data name="ucrExplanatory.TabIndex" type="System.Int32, mscorlib">
+    <value>4</value>
+  </data>
+  <data name="&gt;&gt;ucrExplanatory.Name" xml:space="preserve">
+    <value>ucrExplanatory</value>
+  </data>
+  <data name="&gt;&gt;ucrExplanatory.Type" xml:space="preserve">
+    <value>instat.ucrReceiverSingle, instat, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</value>
+  </data>
+  <data name="&gt;&gt;ucrExplanatory.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;ucrExplanatory.ZOrder" xml:space="preserve">
+    <value>5</value>
+  </data>
+  <data name="ucrResponse.Location" type="System.Drawing.Point, System.Drawing">
+    <value>296, 53</value>
+  </data>
+  <data name="ucrResponse.Size" type="System.Drawing.Size, System.Drawing">
+    <value>106, 26</value>
+  </data>
+  <data name="ucrResponse.TabIndex" type="System.Int32, mscorlib">
+    <value>2</value>
+  </data>
+  <data name="&gt;&gt;ucrResponse.Name" xml:space="preserve">
+    <value>ucrResponse</value>
+  </data>
+  <data name="&gt;&gt;ucrResponse.Type" xml:space="preserve">
+    <value>instat.ucrReceiverSingle, instat, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</value>
+  </data>
+  <data name="&gt;&gt;ucrResponse.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;ucrResponse.ZOrder" xml:space="preserve">
+    <value>6</value>
+  </data>
+  <data name="UcrSelectorByDataFrameAddRemoveSimpleReg.Location" type="System.Drawing.Point, System.Drawing">
+    <value>12, 3</value>
+  </data>
+  <data name="UcrSelectorByDataFrameAddRemoveSimpleReg.Size" type="System.Drawing.Size, System.Drawing">
+    <value>242, 179</value>
+  </data>
+  <data name="UcrSelectorByDataFrameAddRemoveSimpleReg.TabIndex" type="System.Int32, mscorlib">
+    <value>0</value>
+  </data>
+  <data name="&gt;&gt;UcrSelectorByDataFrameAddRemoveSimpleReg.Name" xml:space="preserve">
+    <value>UcrSelectorByDataFrameAddRemoveSimpleReg</value>
+  </data>
+  <data name="&gt;&gt;UcrSelectorByDataFrameAddRemoveSimpleReg.Type" xml:space="preserve">
+    <value>instat.ucrSelectorByDataFrameAddRemove, instat, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</value>
+  </data>
+  <data name="&gt;&gt;UcrSelectorByDataFrameAddRemoveSimpleReg.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;UcrSelectorByDataFrameAddRemoveSimpleReg.ZOrder" xml:space="preserve">
+    <value>7</value>
+  </data>
+  <data name="ucrBase.Location" type="System.Drawing.Point, System.Drawing">
+    <value>12, 215</value>
+  </data>
+  <data name="ucrBase.Size" type="System.Drawing.Size, System.Drawing">
+    <value>410, 54</value>
+  </data>
+  <data name="ucrBase.TabIndex" type="System.Int32, mscorlib">
+    <value>8</value>
+  </data>
+  <data name="&gt;&gt;ucrBase.Name" xml:space="preserve">
+    <value>ucrBase</value>
+  </data>
+  <data name="&gt;&gt;ucrBase.Type" xml:space="preserve">
+    <value>instat.ucrButtons, instat, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</value>
+  </data>
+  <data name="&gt;&gt;ucrBase.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;ucrBase.ZOrder" xml:space="preserve">
+    <value>8</value>
+  </data>
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
   </metadata>
@@ -494,6 +422,9 @@
   </data>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
     <value>424, 271</value>
+  </data>
+  <data name="$this.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
   </data>
   <data name="$this.StartPosition" type="System.Windows.Forms.FormStartPosition, System.Windows.Forms">
     <value>CenterScreen</value>
