--- a/instat/My Project/Resources.sw-KE.resx
+++ b/instat/My Project/Resources.sw-KE.resx
@@ -510,4 +510,7 @@
   <data name="Selected" xml:space="preserve">
     <value>Iliyoteuliwa</value>
   </data>
+  <data name="BarCharts" xml:space="preserve">
+    <value>Chati Mwambaa</value>
+  </data>
 </root>
