Implementation of two variable modelling

--- a/instat/My Project/Resources.resx
+++ b/instat/My Project/Resources.resx
@@ -1507,4 +1507,7 @@
   <data name="Quasipoisson" xml:space="preserve">
     <value>Quasipoisson</value>
   </data>
+  <data name="Gamma" xml:space="preserve">
+    <value>Gamma</value>
+  </data>
 </root>
