--- a/instat/dlgRegressionSimple.resx
+++ b/instat/dlgRegressionSimple.resx
@@ -199,7 +199,7 @@
     <value>NoControl</value>
   </data>
   <data name="lblResponse.Location" type="System.Drawing.Point, System.Drawing">
-    <value>301, 37</value>
+    <value>254, 27</value>
   </data>
   <data name="lblResponse.Size" type="System.Drawing.Size, System.Drawing">
     <value>96, 13</value>
@@ -220,7 +220,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;lblResponse.ZOrder" xml:space="preserve">
-    <value>4</value>
+    <value>8</value>
   </data>
   <data name="lblExplanatory.AutoSize" type="System.Boolean, mscorlib">
     <value>True</value>
@@ -229,7 +229,7 @@
     <value>NoControl</value>
   </data>
   <data name="lblExplanatory.Location" type="System.Drawing.Point, System.Drawing">
-    <value>298, 89</value>
+    <value>251, 79</value>
   </data>
   <data name="lblExplanatory.Size" type="System.Drawing.Size, System.Drawing">
     <value>103, 13</value>
@@ -250,40 +250,40 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;lblExplanatory.ZOrder" xml:space="preserve">
-    <value>3</value>
-  </data>
-  <data name="cmdRegressionOptions.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
-    <value>NoControl</value>
-  </data>
-  <data name="cmdRegressionOptions.Location" type="System.Drawing.Point, System.Drawing">
-    <value>277, 181</value>
-  </data>
-  <data name="cmdRegressionOptions.Size" type="System.Drawing.Size, System.Drawing">
-    <value>120, 23</value>
-  </data>
-  <data name="cmdRegressionOptions.TabIndex" type="System.Int32, mscorlib">
     <value>7</value>
   </data>
-  <data name="cmdRegressionOptions.Text" xml:space="preserve">
-    <value>Regression Options...</value>
+  <data name="cmdDisplayOptions.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
   </data>
-  <data name="&gt;&gt;cmdRegressionOptions.Name" xml:space="preserve">
-    <value>cmdRegressionOptions</value>
+  <data name="cmdDisplayOptions.Location" type="System.Drawing.Point, System.Drawing">
+    <value>277, 221</value>
   </data>
-  <data name="&gt;&gt;cmdRegressionOptions.Type" xml:space="preserve">
+  <data name="cmdDisplayOptions.Size" type="System.Drawing.Size, System.Drawing">
+    <value>120, 23</value>
+  </data>
+  <data name="cmdDisplayOptions.TabIndex" type="System.Int32, mscorlib">
+    <value>7</value>
+  </data>
+  <data name="cmdDisplayOptions.Text" xml:space="preserve">
+    <value>Display Options...</value>
+  </data>
+  <data name="&gt;&gt;cmdDisplayOptions.Name" xml:space="preserve">
+    <value>cmdDisplayOptions</value>
+  </data>
+  <data name="&gt;&gt;cmdDisplayOptions.Type" xml:space="preserve">
     <value>System.Windows.Forms.Button, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="&gt;&gt;cmdRegressionOptions.Parent" xml:space="preserve">
+  <data name="&gt;&gt;cmdDisplayOptions.Parent" xml:space="preserve">
     <value>$this</value>
   </data>
-  <data name="&gt;&gt;cmdRegressionOptions.ZOrder" xml:space="preserve">
-    <value>2</value>
+  <data name="&gt;&gt;cmdDisplayOptions.ZOrder" xml:space="preserve">
+    <value>6</value>
   </data>
   <data name="chkSaveModel.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
     <value>NoControl</value>
   </data>
   <data name="chkSaveModel.Location" type="System.Drawing.Point, System.Drawing">
-    <value>14, 183</value>
+    <value>14, 223</value>
   </data>
   <data name="chkSaveModel.Size" type="System.Drawing.Size, System.Drawing">
     <value>104, 24</value>
@@ -304,10 +304,119 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;chkSaveModel.ZOrder" xml:space="preserve">
+    <value>4</value>
+  </data>
+  <data name="cmdModelOptions.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
+  <data name="cmdModelOptions.Location" type="System.Drawing.Point, System.Drawing">
+    <value>275, 184</value>
+  </data>
+  <data name="cmdModelOptions.Size" type="System.Drawing.Size, System.Drawing">
+    <value>120, 23</value>
+  </data>
+  <data name="cmdModelOptions.TabIndex" type="System.Int32, mscorlib">
+    <value>9</value>
+  </data>
+  <data name="cmdModelOptions.Text" xml:space="preserve">
+    <value>Model Options...</value>
+  </data>
+  <data name="&gt;&gt;cmdModelOptions.Name" xml:space="preserve">
+    <value>cmdModelOptions</value>
+  </data>
+  <data name="&gt;&gt;cmdModelOptions.Type" xml:space="preserve">
+    <value>System.Windows.Forms.Button, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;cmdModelOptions.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;cmdModelOptions.ZOrder" xml:space="preserve">
+    <value>2</value>
+  </data>
+  <data name="chkConvertToVariate.AutoSize" type="System.Boolean, mscorlib">
+    <value>True</value>
+  </data>
+  <data name="chkConvertToVariate.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
+  <data name="chkConvertToVariate.Location" type="System.Drawing.Point, System.Drawing">
+    <value>357, 39</value>
+  </data>
+  <data name="chkConvertToVariate.Size" type="System.Drawing.Size, System.Drawing">
+    <value>70, 30</value>
+  </data>
+  <data name="chkConvertToVariate.TabIndex" type="System.Int32, mscorlib">
+    <value>10</value>
+  </data>
+  <data name="chkConvertToVariate.Text" xml:space="preserve">
+    <value>Convert 
+to variate</value>
+  </data>
+  <data name="&gt;&gt;chkConvertToVariate.Name" xml:space="preserve">
+    <value>chkConvertToVariate</value>
+  </data>
+  <data name="&gt;&gt;chkConvertToVariate.Type" xml:space="preserve">
+    <value>System.Windows.Forms.CheckBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;chkConvertToVariate.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;chkConvertToVariate.ZOrder" xml:space="preserve">
+    <value>1</value>
+  </data>
+  <data name="chkFunction.AutoSize" type="System.Boolean, mscorlib">
+    <value>True</value>
+  </data>
+  <data name="chkFunction.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
+  </data>
+  <data name="chkFunction.Location" type="System.Drawing.Point, System.Drawing">
+    <value>357, 98</value>
+  </data>
+  <data name="chkFunction.Size" type="System.Drawing.Size, System.Drawing">
+    <value>76, 17</value>
+  </data>
+  <data name="chkFunction.TabIndex" type="System.Int32, mscorlib">
+    <value>11</value>
+  </data>
+  <data name="chkFunction.Text" xml:space="preserve">
+    <value>Function...</value>
+  </data>
+  <data name="&gt;&gt;chkFunction.Name" xml:space="preserve">
+    <value>chkFunction</value>
+  </data>
+  <data name="&gt;&gt;chkFunction.Type" xml:space="preserve">
+    <value>System.Windows.Forms.CheckBox, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="&gt;&gt;chkFunction.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;chkFunction.ZOrder" xml:space="preserve">
     <value>0</value>
   </data>
+  <data name="ucrFamily.Location" type="System.Drawing.Point, System.Drawing">
+    <value>15, 177</value>
+  </data>
+  <data name="ucrFamily.Size" type="System.Drawing.Size, System.Drawing">
+    <value>225, 43</value>
+  </data>
+  <data name="ucrFamily.TabIndex" type="System.Int32, mscorlib">
+    <value>0</value>
+  </data>
+  <data name="&gt;&gt;ucrFamily.Name" xml:space="preserve">
+    <value>ucrFamily</value>
+  </data>
+  <data name="&gt;&gt;ucrFamily.Type" xml:space="preserve">
+    <value>instat.ucrDistributions, instat, Version=1.0.0.0, Culture=neutral, PublicKeyToken=null</value>
+  </data>
+  <data name="&gt;&gt;ucrFamily.Parent" xml:space="preserve">
+    <value>$this</value>
+  </data>
+  <data name="&gt;&gt;ucrFamily.ZOrder" xml:space="preserve">
+    <value>3</value>
+  </data>
   <data name="ucrModelName.Location" type="System.Drawing.Point, System.Drawing">
-    <value>122, 181</value>
+    <value>122, 221</value>
   </data>
   <data name="ucrModelName.Size" type="System.Drawing.Size, System.Drawing">
     <value>149, 23</value>
@@ -325,10 +434,10 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;ucrModelName.ZOrder" xml:space="preserve">
-    <value>1</value>
+    <value>5</value>
   </data>
   <data name="ucrExplanatory.Location" type="System.Drawing.Point, System.Drawing">
-    <value>296, 105</value>
+    <value>249, 95</value>
   </data>
   <data name="ucrExplanatory.Size" type="System.Drawing.Size, System.Drawing">
     <value>106, 26</value>
@@ -346,10 +455,10 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;ucrExplanatory.ZOrder" xml:space="preserve">
-    <value>5</value>
+    <value>9</value>
   </data>
   <data name="ucrResponse.Location" type="System.Drawing.Point, System.Drawing">
-    <value>296, 53</value>
+    <value>249, 43</value>
   </data>
   <data name="ucrResponse.Size" type="System.Drawing.Size, System.Drawing">
     <value>106, 26</value>
@@ -367,7 +476,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;ucrResponse.ZOrder" xml:space="preserve">
-    <value>6</value>
+    <value>10</value>
   </data>
   <data name="ucrSelectorSimpleReg.Location" type="System.Drawing.Point, System.Drawing">
     <value>12, 3</value>
@@ -388,10 +497,10 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;ucrSelectorSimpleReg.ZOrder" xml:space="preserve">
-    <value>7</value>
+    <value>11</value>
   </data>
   <data name="ucrBase.Location" type="System.Drawing.Point, System.Drawing">
-    <value>12, 215</value>
+    <value>12, 255</value>
   </data>
   <data name="ucrBase.Size" type="System.Drawing.Size, System.Drawing">
     <value>410, 54</value>
@@ -409,7 +518,7 @@
     <value>$this</value>
   </data>
   <data name="&gt;&gt;ucrBase.ZOrder" xml:space="preserve">
-    <value>8</value>
+    <value>12</value>
   </data>
   <metadata name="$this.Localizable" type="System.Boolean, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
     <value>True</value>
@@ -418,7 +527,10 @@
     <value>6, 13</value>
   </data>
   <data name="$this.ClientSize" type="System.Drawing.Size, System.Drawing">
-    <value>424, 271</value>
+    <value>429, 306</value>
+  </data>
+  <data name="$this.ImeMode" type="System.Windows.Forms.ImeMode, System.Windows.Forms">
+    <value>NoControl</value>
   </data>
   <data name="$this.StartPosition" type="System.Windows.Forms.FormStartPosition, System.Windows.Forms">
     <value>CenterScreen</value>
